=== SVN

* Added Database#add_index method (thanks coda.hale).

* Added error reporting for filtering on comparison not in a block (thanks Jim Morris).

* Added support for inline index definition (thanks Dado).

* Added Database#create_table! method for forcibly creating a table (thanks Dado).

* Added support for using Dataset#update with block.

* Changed subscript access to use | operator.

* Fixed subscript access in sequelizer.

* Added support for subscript access using Symbol#/ operator.

=== 0.4.2.2 (2007-12-10)

* Improved code coverage.

* Fixed Dataset#count to work properly with datasets with fixed SQL (when using #fetch).

* Added Model.create_with_params method that filters the given parameters accordring to the model's columns (thanks Aman Gupta). 

=== 0.4.2.1 (2007-12-09)

* Refactored and fixed Dataset#reverse_order to work with field quoting (thanks Christian).

* Fixed problem with field quoting in insert statements.

* Changed sequelizer code to silently fail on any error when requiring parsetree and ruby2ruby.

* Added Database#create_view, #create_or_replace_view and #drop_view methods. Also implemented Dataset#create_view and #create_or_replace_view convenience methods.

* Keep DRY by re-using Model#[]= from method_missing.

* Added Model.fetch alias for DB.fetch.set_model(Model)

=== 0.4.2 (2007-12-07)

* Implemented Model#save_changes.

* Extended Model#save to accept specific columns to update.

* Implemented experimental JDBC adapter.

* Added adapter skeleton as starting point for new adapters.

* Cleaned-up adapters and moved automatic requiring of 'sequel' to adapter stubs.

=== 0.4.1.3 (2007-12-05)

* Better plugin conventions.

* Added experimental OpenBase adapter.

* Fixed Sequel.<xxx> methods to accept options hash as well as database name. Fixed Sequel.connect to accept options hash as well as URI (Wayne).

=== 0.4.1.2 (2007-12-04)

* Added release rake task (using RubyForge).

* Changed Model.is to accept variable arity.
