@@ -1,5 +1,7 @@
 === SVN
 
+* Fixed Model.[] to raise for boolean argument (#97).
+
 * Added Database#add_index method (thanks coda.hale).
 
 * Added error reporting for filtering on comparison not in a block (thanks Jim Morris).
